more content, style improvements(?)

--- a/color-scheme/index.html
+++ b/color-scheme/index.html
@@ -4,35 +4,35 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Slideshow</title>
+	<title>Easy Dark Mode with color-scheme</title>
 </head>
 <body>
   <main class="show">
-    <section class="intro">
+    <section id="1" class="intro">
       <header>
         <p class="big">Hello!</p>
       </header>
-			<div class="content">
+			<div class="content center">
 				<p class="big">I'm <span class="rainbow12 clip-text">Sara</span> :)</p>
 				<p>A Quereinsteigerin into web dev in 2022, hobbyist since 1998!
 					<br>Highly interested in inclusive design and accessibility.</p>
 			</div>
 		</section>
-		<section class="title">
+		<section id="2" class="title">
 			<header>
 				<h1>Easy Dark Mode</h1>
 			</header>
-			<div class="content">
+			<div class="content center">
 				<p class="big">with <span class="rainbow12 clip-text code">color-scheme</span></p>
 				<p>It's just black and white.
 					<br>But should it be? 🤔</p>
 			</div>
 		</section>
-		<section>
+		<section id="3">
 			<header>
 				<h2>First, a question...</h2>
 			</header>
-			<div class="content left">
+			<div class="content">
 				...is this comfortable to read?
 				<h3>Does anyone suffer from:</h3>
 				Migraines?
@@ -40,16 +40,24 @@
 					<br>Strong astigmatism?
 			</div>
 		</section>
-		<section>
+		<section id="4">
 			<header>
-				<h2>Slide title here</h2>
+				<h2>Default HTML themes?</h2>
 			</header>
-			<div class="content">
-				<p class="big">Not-heading big text</p>
-				Content here
+			<div class="content columns2">
+				<div>
+					<h3>HTML has a theme?</h3>
+					It has (at least) two!
+					<p>We spend so much time in HTML-after-CSS-reset that we forget it exists.</p>
+					<p>It's not bad!</p>
+				</div>
+				<div class="center">
+					<img class="quarter" src="themeLight.png" width="250">
+					<img class="quarter" src="themeDark.png" width="250">
+				</div>
 			</div>
 		</section>
-		<section>
+		<section id="5">
 			<header>
 				<h2>title</h2>
 			</header>
@@ -62,7 +70,7 @@
 				</ul>
 			</div>
 		</section>
-		<section>
+		<section id="6">
 			<header>
 				<h2>title</h2>
 			</header>
@@ -70,7 +78,7 @@
 				content
 			</div>
 		</section>
-		<section>
+		<section id="7">
 			<header>
 				<h2>title</h2>
 			</header>
@@ -78,7 +86,7 @@
 				content
 			</div>
 		</section>
-		<section>
+		<section id="8">
 			<header>
 				<h2>title</h2>
 			</header>
@@ -86,7 +94,7 @@
 				content
 			</div>
 		</section>
-		<section>
+		<section id="9">
 			<header>
 				<h2>title</h2>
 			</header>
@@ -94,7 +102,7 @@
 				content
 			</div>
 		</section>
-		<section>
+		<section id="10">
 			<header>
 				<h2>title</h2>
 			</header>
@@ -102,7 +110,15 @@
 				content
 			</div>
 		</section>
-		<section>
+		<section id="11">
+			<header>
+				<h2>title</h2>
+			</header>
+			<div class="content">
+				content
+			</div>
+		</section>
+		<section id="12">
 			<header>
 				<h2>title</h2>
 			</header>
