updating slides code

--- a/index.html
+++ b/index.html
@@ -1,75 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="show">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style>
-			* { box-sizing: border-box }
-			html { color-scheme: light dark }
-			body { margin: 0 }
-			main.show {
-					scroll-snap-type: block mandatory;
-					scroll-snap-stop: always;
-					overflow-y: scroll;
-					height: 100vh;
-			}
-			.show div {
-					height: 100vh;
-					scroll-snap-align: start;
-
-					display: grid;
-					place-content: center;
-					&:not(:last-child) {
-							margin-bottom: 1rem;
-					}
-			}       
-			button#show {
-			position: fixed;
-			left: 0.5em;
-			bottom: 0.5em;
-			opacity: 0.1;
-			transition: opacity 0.25s;
-			&:hover { opacity: 0.75 }
-			&:active { opacity: 1 }
-			}
-			.show .mgn {background-color: #8173}
-			.show .red {background-color: #a353}
-			.show .pch {background-color: #c663}
-			.show .orn {background-color: #e943}
-			.show .ylw {background-color: #ed03}
-			.show .lim {background-color: #9d53}
-			.show .grn {background-color: #4d83}
-			.show .tqs {background-color: #2cb3}
-			.show .sky {background-color: #0bc3}
-			.show .blu {background-color: #09c3}
-			.show .nav {background-color: #36b3}
-			.show .prp {background-color: #6393}
-		</style>
+		<link rel="stylesheet" href="style.css">
 		<title>Slideshow</title>
 	</head>
 	<body>
-		<main class="show">
-			<div class="mgn"><h1>hello</h1><p>Content text here</p></div>
+		<main>
+			<div class="title center mgn">
+				<h1>Why not both?</h1>
+				<p>Or, why building both dark and light schemes together is easy, actually</p>
+			</div>
+
 			<div class="red"><h2>why</h2><p>Content text here</p></div>
+
 			<div class="pch"><h2>does</h2><p>Content text here</p></div>
+
 			<div class="orn"><h2>this</h2><p>Content text here</p></div>
+
 			<div class="ylw"><h2>not</h2><p>Content text here</p></div>
+
 			<div class="lim"><h2>snap</h2><p>Content text here</p></div>
+
 			<div class="grn"><h2>oh</h2><p>Content text here</p></div>
+
 			<div class="tqs"><h2>wait</h2><p>Content text here</p></div>
+
 			<div class="sky"><h2>now</h2><p>Content text here</p></div>
+
 			<div class="blu"><h2>it</h2><p>Content text here</p></div>
+
 			<div class="nav"><h2>does</h2><p>Content text here</p></div>
+
 			<div class="prp"><h2>yay!</h2><p>Content text here</p></div>
+
 			<div class="mgn"><h2>here</h2><p>Content text here</p></div>
+
 			<div class="red"><h2>we</h2><p>Content text here</p></div>
+
 			<div class="pch"><h2>go</h2><p>Content text here</p></div>
+
 			<div class="orn"><h2>again</h2><p>Content text here</p></div>
 		</main>
 		<button id="show" onClick="slideshowToggle()">Toggle Slideshow</button>
 		<script>
 		function slideshowToggle() {
-			document.querySelector("main").classList.toggle("show");
+			document.querySelector("html").classList.toggle("show");
 		}
 
 		// document.addEventListener("keydown", (event) => {
