--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<main>
 			<div class="title center mgn">
 				<h1>Why not both?</h1>
-				<p>Or, why building both dark and light schemes together is easy, actually</p>
+				<p>Or, why building both dark and light schemes together is easy, actually.</p>
 			</div>
 
-			<div class="red"><h2>why</h2><p>Content text here</p></div>
+			<div class="red"><h2>hello! 👋</h2><p>Content text here</p></div>
 
 			<div class="pch"><h2>does</h2><p>Content text here</p></div>
 
